tests/pass/import_basic.kr
# Test basic import and module usage

import math

set result to call math.sqrt with 16
print result
# Expected: 4

